k8s/ingress-evaluate.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster-evaluate-ingress
  namespace: togglemaster
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /evaluate$2
spec:
  rules:
    - http:
        paths:
          - path: /evaluate(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004
