k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: togglemaster-ingress
  namespace: togglemaster
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          # auth-service: /validate, /admin/keys
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8001

          # flag-service: /flags, /flags/<name>
          - path: /flags(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: flag-service
                port:
                  number: 8002

          # targeting-service: /rules, /rules/<flag_name>
          - path: /rules(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: targeting-service
                port:
                  number: 8003

          # evaluation-service: /evaluate
          - path: /evaluate(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004

          # health checks individuais
          - path: /health/auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
